# vzool-config.py

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
config/: __init__.py
tests/: test_config_manager.py
vzool_config/: __init__.py  config_manager.py
